tools/onyx/k8s/testdata/golden/deployment.yaml
# Code generated by onyx. DO NOT EDIT.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app.kubernetes.io/name: test
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "13434"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: test
      enableServiceLinks: false
      containers:
        - name: test
          image: test
          ports:
            - containerPort: 4040
            - containerPort: 13434
            - containerPort: 9090
            - containerPort: 45322
            - containerPort: 45323
            - containerPort: 8443
          env:
            - name: A_SERVICE_GRPC_SOCKET_PATH
              value: /tmp/a-service.socket
            - name: A_SERVICE_GRPC_DISABLE_TLS
              value: "true"
            - name: B_SERVICE_GRPC_PORT
              value: "9090"
            - name: EXTERNAL_GRPC_PORT
              value: "45322"
            - name: EXTERNAL_GRPC_GATEWAY_PORT
              value: "45323"
            - name: D_HTTP_HTTP_PORT
              value: "45329"
            - name: WEB_GRPCWEBPROXY_PORT
              value: "8443"
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /liveness
              port: 4040
            periodSeconds: 5
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /liveness
              port: 4040
          readinessProbe:
            httpGet:
              path: /readiness
              port: 4040
