tools/onyx/k8s/testdata/golden/ingress.yaml
# Code generated by onyx. DO NOT EDIT.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-grpc
  labels:
    app.kubernetes.io/name: test
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  name: external-grpc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-grpc-gateway
  labels:
    app.kubernetes.io/name: test
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  name: external-grpc-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-grpcwebproxy
  labels:
    app.kubernetes.io/name: test
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  name: web-grpcwebproxy
