tools/onyx/k8s/testdata/golden/service.yaml
# Code generated by onyx. DO NOT EDIT.
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app.kubernetes.io/name: test
spec:
  selector:
    app.kubernetes.io/name: test
  ports:
    - name: metrics
      port: 13434
    - name: b-service-grpc
      port: 9090
    - name: external-grpc
      port: 45322
    - name: external-grpc-gateway
      port: 45323
    - name: web-grpcwebproxy
      port: 8443
